Bug 438241, Mousover and mouseout don't behave properly with native anonymous content, r=jst,sr=sicking